# serialbox

./: README.md
examples/size1/: CMakeLists.txt  main_consumer.f90  main_producer.f90
fortran/: utils_ppser.f90
python/: pp_ser.py
python/serialbox/: Visualizer.py  serialization.py
tools/: compare.cpp
